--- a/client/app/html/user_main_helpers/paysafecard_purchase_form.html
+++ b/client/app/html/user_main_helpers/paysafecard_purchase_form.html
@@ -57,16 +57,21 @@ $(document).ready(function(){
                        modal: true,
                        width: '750',
                        height: '850',
-                       title: "Paysafecard"
+                       title: "Paysafecard",
+                       close: function() {
+                           // clear the html. This is necessary so that if the user closes the dialog, and then
+                           // opens it again, that we can still detect the "load" event below, that is used for
+                           // removing the spinner icon. Without this, the spinner continues to show the second
+                           // time that the iframe is loaded.
+                          $dialog.html('');
+                       }
                    });
                 $dialog.dialog('open');
-
-
 
                 // Only once the customer panel is loaded, hide the spinner
                 $('#id-paysafe-iframe').load(function () {
                     $('#id-show-loading-spinner').hide();
-                })
+                });
 
             },
             error: function (jqXHR, textStatus, errorThrown) {
