Translated ok_url and nok_url messages

--- a/client/app/html/main_container.html
+++ b/client/app/html/main_container.html
@@ -127,7 +127,7 @@ $(document).ready(function() {
                 <div class="grid_9 alpha omega">
                     <div class="cl-left-text cl-text-large-format"><br><br>
                         {% blocktrans with app_name as app_name %}If you like {{ app_name }}, consider becoming a {% endblocktrans %}
-                        <strong><a class="cl-see_all_vip_benefits" href="#">{% trans 'VIP member' %}</a></strong>
+                        <strong><a class="cl-see_all_vip_benefits" href="#">{% trans 'VIP member' %}</a></strong>.
                     </div>
                 </div>
                 {% endif %}
