--- a/client/app/html/user_main_helpers/purchase_buttons.html
+++ b/client/app/html/user_main_helpers/purchase_buttons.html
@@ -4,20 +4,39 @@
 
 <div class="cl-payment_tabs">
   <ul>
-      <li><a href="#paysafecard-tab">PAYSAFE CARD</a></li>
-
-      <li><a href="#credit-card-tab"><img src="/images/payment_images/paypal_credit_187x47.png"></a></li>
+      <li><a href="#paysafecard-tab"><img src="/images/payment_images/paysafecard_blue_174x47.png"></a></li>
 
       {% if paypal_data.country_code == 'MX' %}
           <!-- Mexico accepts debit cards -->
           <li><a href="#credit-card-tab"><img src="/images/payment_images/paypal_mx_debit_logo_215x47.jpg"></a></li>
+      {% else %}
+          <li><a href="#credit-card-tab"><img src="/images/payment_images/paypal_credit_187x47.png"></a></li>
       {% endif %}
       <li><a href="#paypal-tab"><img src="/images/payment_images/paypal_logo_75x47.png"></a></li>
+
   </ul>
+
+
+  <div id="paysafecard-tab">
+      <p class="cl-text-large-format">
+        <strong>
+        {% blocktrans with app_name as app_name %}Purchase VIP status with cash!
+            <a class="cl-override-widget-css" href="https://www.paysafecard.com/pos/" target="_blank">Buy a paysafecard</a> at a location near you.{% endblocktrans %}
+        </strong>
+
+      <p>
+        {% include "user_main_helpers/paysafecard_purchase_form.html" %}
+
+      <p>
+        {% blocktrans %}
+        This is a one-time VIP membership payment that does not automatically renew.
+        {% endblocktrans %}
+
+  </div>
 
   <div id="credit-card-tab">
 
-      <p>
+      <p class="cl-text-large-format">
         <strong>
         {% blocktrans with app_name as app_name %}Purchase VIP status with a credit or debit card{% endblocktrans %}
         </strong>
@@ -41,32 +60,15 @@
             {% endblocktrans %}
         {% endif %}
   </div>
-    
+
   <div id="paypal-tab">
-      <p>
+      <p class="cl-text-large-format">
         <strong>
         {% blocktrans with app_name as app_name %}Purchase VIP status with a PayPal account{% endblocktrans %}
         </strong>
 
       <p>
         {% include "user_main_helpers/paypal_purchase_form.html" %}
-
-      <p>
-        {% blocktrans %}
-        This is a one-time VIP membership payment that does not automatically renew.
-        {% endblocktrans %}
-
-  </div>
-
-  <div id="paysafecard-tab">
-      <p>
-        <strong>
-        {% blocktrans with app_name as app_name %}Purchase VIP status with a PaySafeCard.
-            Available at a location near you.{% endblocktrans %}
-        </strong>
-
-      <p>
-        {% include "user_main_helpers/paysafecard_purchase_form.html" %}
 
       <p>
         {% blocktrans %}
