--- a/client/app/html/user_main_helpers/paysafecard_purchase_form.html
+++ b/client/app/html/user_main_helpers/paysafecard_purchase_form.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% if paysafecard_data.country_override %}
-        <h1>Warning - country override to {{ paysafecard_data.country_override }}</h1>
+        <h1>Warning - country override to {{ paysafecard_data.country_code }}</h1>
 {% endif %}
 
 {% if paysafecard_data.testing_paysafecard %}
