Updated html templates to use the url lookup format required by django 1.5

--- a/client/app/html/common_helpers/footer.html
+++ b/client/app/html/common_helpers/footer.html
@@ -12,7 +12,7 @@
 
         <div class="grid_6  omega cl-right-text info-link-footer-format">
             <div class="cl-padding-3px">
-                <a href="{% url views.terms %}" rel="address:{% url views.terms %}">{% trans "Terms and conditions" %}</a>
+                <a href="{% url 'views.terms' %}">{% trans "Terms and conditions" %}</a>
             </div>
         </div>
     </div> <!-- end grid_12 -->
