--- a/client/app/html/user_main_helpers/main_body.html
+++ b/client/app/html/user_main_helpers/main_body.html
@@ -130,7 +130,7 @@
             <strong>{% trans "Photos" %}:</strong>
 
             <div id="id-edit-photos-link">
-                <a href="{% url edit_profile_url display_nid=primary_user_profile_data_fields.owner_nid %}">
+                <a href="{% url 'edit_profile_url' display_nid=primary_user_profile_data_fields.owner_nid %}">
                     ({% trans "edit" %}/{% trans "upload" %} {% trans "photos" %})
                 </a>
             </div>
@@ -349,8 +349,7 @@
 <div class="cl-clear"></div>
 <div class="grid_2 alpha">
     <strong>{% trans "See my profile:" %}</strong><br>
-    <a href="{% url user_profile_url display_nid=viewed_profile_data_fields.display_nid profile_url_description=viewed_profile_data_fields.profile_url_description %}"
-            rel="address:{% url user_profile_url display_nid=viewed_profile_data_fields.display_nid profile_url_description=viewed_profile_data_fields.profile_url_description %}">
+    <a href="{% url 'user_profile_url' display_nid=viewed_profile_data_fields.display_nid profile_url_description=viewed_profile_data_fields.profile_url_description %}">
         ({% trans "click here" %})
     </a>
 </div> <!-- end grid_2 -->
@@ -374,9 +373,9 @@
     <!-- note, we call the same function to eliminate or enable an elimiated profile
 essentially we just toggle a bit -->
     {% if not viewed_profile_data_fields.account_has_been_removed_message %}
-    <a HREF="javascript:confirmDecision('{% blocktrans %}Are you sure you want to eliminate your profile?{% endblocktrans %}', '{% url delete_account owner_uid=primary_user_profile_data_fields.owner_uid %}')">({% trans "click here" %}) </a>
+    <a HREF="javascript:confirmDecision('{% blocktrans %}Are you sure you want to eliminate your profile?{% endblocktrans %}', '/rs/delete_account/{{ primary_user_profile_data_fields.owner_uid }}/')">({% trans "click here" %}) </a>
     {% else %}
-    <a HREF="javascript:confirmDecision('Enable this profile?', '{% url undelete_account owner_uid=primary_user_profile_data_fields.owner_uid %}')">({% trans "click here" %}) </a>
+    <a HREF="javascript:confirmDecision('Enable this profile?', '/rs/undelete_account/{{ primary_user_profile_data_fields.owner_uid }}/')">({% trans "click here" %}) </a>
     {% endif %}
 
 </div>
