--- a/client/app/html/user_main_helpers/photos.html
+++ b/client/app/html/user_main_helpers/photos.html
@@ -6,7 +6,10 @@
      for other clients in the system -->
 
     <div id="id-show_photo_rules_popup" style="display:none;">
+        <strong>{% trans "Photo Rules:" %}</strong>
         {% include "user_main_helpers/photo_rules.html" %}
+        <strong>{% trans "Prohibited Photos:" %}</strong>
+        {% include "user_main_helpers/prohibited_photos.html" %}
         <br><br><input type="button" class="cl-submit" id="id-show_photo_rules_popup-close" alt="" value="{% trans 'I understand and accept these rules' %}">
     </div>
 
@@ -38,7 +41,7 @@
             
             $.get("/rs/ajax/check_if_photo_rules_to_be_shown/", function(html_response) {
                if (html_response == "show_rules") {
-                   showDialogPopup("#id-show_photo_rules_popup", 400, 400, false);
+                   showDialogPopup("#id-show_photo_rules_popup", 700, 600, false);
                }
             });
 
@@ -195,7 +198,7 @@
 
     <script type="text/javascript">
         $("#id-show_photo_rules_anchor").click(function() {
-            showDialogPopup("#id-show_photo_rules_popup", 400, 400, true);
+            showDialogPopup("#id-show_photo_rules_popup", 700, 600, true);
             return false; 
         });
     </script>
